--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-data/input/*.csv
+data/FimaNfipPolicies.csv
+data/FimaNfipClaims.csv
 models/*.sav
 mlruns
 models/*
