--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-matplotlib==3.4.3
+jupyterlab==3.1.14
 numpy==1.21.2
 pandas==1.3.3
 scikit-learn==1.0
 statsmodels==0.13.0
+xgboost==1.7.2
 dask==2022.10.2
+matplotlib==3.4.3
 seaborn==0.11.2
